<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pandita.rishabh.androidservicesshutdown.MainActivity">


    <LinearLayout
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/timerText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/timer"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/timerEditText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="min"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="normal" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/wireless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/wirelessText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/wifi"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/wifiSwitch"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wireless"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/bluetoothText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/bluetooth"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/bluetoothSwitch"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/killBackTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bluetooth"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/killBackTaskText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/kill_all_task"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/killBackTaskSwitch"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/silentRing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/killBackTask"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/silentRingText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/silent_phone"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/silentRingSwitch"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/screenLock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/silentRing"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/screenLockText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/lock_screen"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/screenLockSwitch"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/killMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/screenLock"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/killMusicText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/stop_music"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/killMusicSwitch"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/startStopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/killMusic"
        android:layout_centerHorizontal="true"
        android:text="@string/start" />
    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startStopButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100sp"
        android:layout_centerHorizontal="true"
        android:text="@string/theboringapp_rishabhpandita"
        android:textColor="#000000"
        android:textSize="5sp"/>
</RelativeLayout>
</ScrollView>